made few changes in speech module

--- a/practice/general.ipynb
+++ b/practice/general.ipynb
@@ -359,11 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['HF_TOKEN']= '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'"
+    "os.environ['HF_TOKEN']= ''"
    ]
   },
   {
