made few changes in modules

--- a/practice/general.ipynb
+++ b/practice/general.ipynb
@@ -359,72 +359,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['HF_TOKEN']= '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'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "# Add the Gradio client import\n",
+    "from gradio_client import Client\n",
+    "import os\n",
+    "\n",
+    "# Initialize the Gradio client for the specified model\n",
+    "client = Client(\"black-forest-labs/FLUX.1-schnell\")\n",
+    "# Example usage: Generate an image from text\n",
+    "text_prompt = \"A futuristic cityscape at sunset\"\n",
+    "response = client.predict(text_prompt,api_name='/infer')\n",
+    "response\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": []
+    }
+   ],
+   "source": [
+    "response[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['HF_TOKEN']= ''"
+    "from src.modules.speech.tts import TextToSpeech"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from gradio_client import Client\n",
-    "import os\n",
-    "import shutil\n",
-    "from PIL import Image  # To convert & display the image\n",
-    "\n",
-    "\n",
-    "# Initialize the Gradio client for the specified model\n",
-    "client = Client(\"black-forest-labs/FLUX.1-schnell\")\n",
-    "\n",
-    "# Example usage: Generate an image from text\n",
-    "text_prompt = \"A boy playing cricket in hot summer in bangalore\"\n",
-    "response = client.predict(text_prompt,seed=0,width=1024,height=1024,num_inference_steps=4, api_name='/infer')\n"
+    "tts = TextToSpeech()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=await tts.synthesize(\"Hello, this is a test of the text-to-speech synthesis.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.modules.speech.stt import SpeechToText"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stt = SpeechToText()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
+     "data": {
+      "text/plain": [
+       "' Hello, this is a test of the text-to-speech synthesis.'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_dir = \"images\"\n",
-    "os.makedirs(output_dir, exist_ok=True)\n",
-    "\n",
-    "# existing_images = [f for f in os.listdir(output_dir) if f.startswith(\"Gideon_image_\") and f.endswith(\".png\")]\n",
-    "next_image_number = len(os.listdir(output_dir)) + 1  # Increment count\n",
-    "\n",
-    "# Generate the next filename\n",
-    "image_filename = f\"Gideon_image_{next_image_number}.png\"\n",
-    "image_dest_path = os.path.join(output_dir, image_filename)\n",
-    "\n",
-    "# Extract the image path from the response tuple\n",
-    "image_temp_path = response[0]  # Path to the generated image\n",
-    "\n",
-    "# Convert WebP to PNG and save with the sequential name\n",
-    "image = Image.open(image_temp_path)\n",
-    "image.save(image_dest_path, format=\"PNG\")  # Save as PNG\n",
-    "\n",
-    "# Display the image\n",
-    "# image.show()\n",
-    "\n",
-    "print(f\"Image saved as: {image_dest_path}\")"
+    "await stt.transcribe(audio_data=a)"
    ]
   },
   {
